refactor: filter translations in queries, remove mapper instantiation and author translations
- JOIN FETCH on findBySlugAndLanguage (post/project); tag search rewritten
  to COALESCE single-content JOIN FETCH with explicit countQuery
- Output mappers renamed to *OutputMapper; no constructors, no instantiation,
  all Java-side language filtering removed; language always selected by query
- Author translations removed entirely (AuthorContentEntity/Model/Request/
  Response deleted; AuthorModel/AuthorEntity/AuthorResponse cleaned)
- AuthorMapper renamed/rewritten as AuthorOutputMapper (pure mappings only)
- New POST /v1/post/batch (PostBatchRequest, request order preserved,
  permitAll in SecurityConfig)
- Search GET endpoints leave output layer divergence: batch use cases
  GetProjectByBatchUseCase/GetTagByBatchUseCase added
- Tests updated; failing ProjectInputMapperTest/TagInputMapperTest and stale
  PostOutputMapperTest/ProjectMapperTest deleted