@@ -5,7 +5,7 @@ import dev.vitorpaulo.blog.common.exception.infrastructure.ExceptionCode;
 import dev.vitorpaulo.blog.common.util.PostUtils;
 import dev.vitorpaulo.blog.domain.ProjectContentEntity;
 import dev.vitorpaulo.blog.domain.ProjectEntity;
-import dev.vitorpaulo.blog.output.mapper.ProjectMapper;
+import dev.vitorpaulo.blog.output.mapper.ProjectOutputMapper;
 import dev.vitorpaulo.blog.model.*;
 import dev.vitorpaulo.blog.model.common.PaginatedInput;
 import dev.vitorpaulo.blog.model.common.PaginatedOutput;
@@ -18,9 +18,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static dev.vitorpaulo.blog.common.util.RoleUtils.isAdmin;
@@ -30,13 +28,14 @@ import static dev.vitorpaulo.blog.common.util.RoleUtils.isAdmin;
 public class ProjectOutput {
 
 	private final ProjectRepository projectRepository;
-	private final ProjectMapper projectMapper;
+	private final ProjectOutputMapper projectOutputMapper;
 	private final AuthorRepository authorRepository;
 	private final TagRepository tagRepository;
 
+	@Transactional(readOnly = true)
 	public ProjectModel findById(UUID id) {
-		return projectRepository.findById(id)
-			.map(projectMapper::toModel)
+		return projectRepository.findByIdWithContents(id)
+			.map(project -> projectOutputMapper.toModel(project, Collections.emptyList()))
 			.orElseThrow(() -> new NotFoundException(ExceptionCode.PROJECT_NOT_FOUND));
 	}
 
@@ -47,7 +46,7 @@ public class ProjectOutput {
 		entity.setViewCount(entity.getViewCount() == null ? 1L : entity.getViewCount() + 1);
 
 		final var saved = projectRepository.save(entity);
-		return projectMapper.toModel(saved, language);
+		return projectOutputMapper.toModel(saved, Collections.emptyList());
 	}
 
 	@Transactional
@@ -56,15 +55,14 @@ public class ProjectOutput {
 		final var slug = generateUniqueSlug(firstContent.title(), null);
 
 		final var entity = new ProjectEntity();
-		projectMapper.updateEntity(project, entity);
-		resetReactionCounts(entity);
+		projectOutputMapper.updateEntity(project, entity);
 		entity.setSlug(slug);
 
 		syncContents(entity, project.translations());
 		entity.setAuthors(authorRepository.findAllById(List.of(author.id())));
 		if (tagIds != null) entity.setTags(tagRepository.findAllById(tagIds));
 
-		return projectMapper.toModel(projectRepository.save(entity));
+		return projectOutputMapper.toModel(projectRepository.save(entity), tagIds);
 	}
 
 	@Transactional
@@ -77,16 +75,16 @@ public class ProjectOutput {
 		final var titleChanged = firstContent.title() != null
 			&& !firstContent.title().equalsIgnoreCase(previousTitle);
 
-		projectMapper.updateEntity(project, entity);
+		projectOutputMapper.updateEntity(project, entity);
 		if (titleChanged) {
 			entity.setSlug(generateUniqueSlug(firstContent.title(), entity.getId()));
 		}
 
 		syncContents(entity, project.translations());
 
-		if (tagIds != null) entity.setTags(tagRepository.findAllById(tagIds));
+		entity.setTags(tagRepository.findAllById(Objects.requireNonNullElse(tagIds, Collections.emptyList())));
 
-		return projectMapper.toModel(projectRepository.save(entity));
+		return projectOutputMapper.toModel(projectRepository.save(entity), tagIds);
 	}
 
 	@Transactional
@@ -94,6 +92,7 @@ public class ProjectOutput {
 		projectRepository.deleteByIdWithAuthor(ids, author.id(), isAdmin(author.role()));
 	}
 
+	@Transactional(readOnly = true)
 	public PaginatedOutput<ProjectModel> search(PaginatedInput<ProjectQueryModel> pageableInput, AuthorModel author) {
 		final var language = pageableInput.query().language();
 		final var pageable = PageRequest.of(pageableInput.page(), pageableInput.size());
@@ -107,12 +106,8 @@ public class ProjectOutput {
 				mapSortProperty(pageableInput.sort(), pageableInput.direction())
 			);
 
-		final var content = page.getContent().stream()
-			.map(entity -> projectMapper.toModel(entity, language))
-			.toList();
-
 		return new PaginatedOutput<>(
-			content,
+			page.map(project -> projectOutputMapper.toModel(project, Collections.emptyList())).toList(),
 			page.getNumber(),
 			page.getSize(),
 			page.getTotalElements(),
@@ -120,17 +115,11 @@ public class ProjectOutput {
 		);
 	}
 
-	public List<ProjectModel> findAllById(List<UUID> ids) {
-		if (ids == null || ids.isEmpty()) return List.of();
-		return projectRepository.findAllById(ids).stream()
-			.map(projectMapper::toModel)
-			.toList();
-	}
-
+	@Transactional(readOnly = true)
 	public List<ProjectModel> findAllById(List<UUID> ids, Language language) {
-		if (ids == null || ids.isEmpty()) return List.of();
-		return projectRepository.findAllById(ids).stream()
-			.map(entity -> projectMapper.toModel(entity, language))
+		return projectRepository.findAllByIdWithSingleContent(ids, language)
+			.stream()
+			.map(project -> projectOutputMapper.toModel(project, Collections.emptyList()))
 			.toList();
 	}
 
@@ -144,7 +133,7 @@ public class ProjectOutput {
 				existing.setTitle(model.title());
 				existing.setDescription(model.description());
 			} else {
-				final var content = projectMapper.toContentEntity(model);
+				final var content = projectOutputMapper.toContentEntity(model);
 				content.setLanguage(lang);
 				content.setProject(entity);
 				entity.getContents().add(content);
@@ -152,14 +141,6 @@ public class ProjectOutput {
 		});
 
 		entity.getContents().removeIf(c -> !translations.containsKey(c.getLanguage()));
-	}
-
-	private void resetReactionCounts(ProjectEntity entity) {
-		entity.setCelebrateCount(0L);
-		entity.setGeniusCount(0L);
-		entity.setHelpCount(0L);
-		entity.setViewCount(0L);
-		entity.setLoveCount(0L);
 	}
 
 	private ProjectContentModel getFirstContent(Map<Language, ProjectContentModel> translations) {
